--- a/live-service-web/pom.xml
+++ b/live-service-web/pom.xml
@@ -43,9 +43,16 @@
 
 	<!-- 插件配置 -->
 	<build>
-		<finalName>live-service</finalName>
+		<finalName>service_8616</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<resources>
+            <resource>  
+                <directory>src/main/java</directory>  
+                <includes>  
+                    <include>**/*.xml</include>  
+                </includes>  
+                <filtering>false</filtering>  
+            </resource>  
 			<!-- 控制资源文件的拷贝 -->
 			<resource>
 				<!-- 文件源目录 -->
@@ -55,6 +62,7 @@
 				<filtering>true</filtering>
 				<includes>
 					<include>**/*.xml</include>
+					<include>**/*.txt</include>
 					<include>**/*.properties</include>
 				</includes>
 			</resource>
