--- a/live-service-web/src/main/resources/conf.properties
+++ b/live-service-web/src/main/resources/conf.properties
@@ -6,7 +6,7 @@ mc.enable=true
 mc.data.token.exptime=21600
 
 # 测试服务器http请求地址(如开、停播通知,需要转发到测试服)
-testServiceHttpUrl=http://testservice.9mitao.com/
+testServiceHttpUrl=http://192.168.1.70:8616/
 
 md5Code=abcd
 desc=giftNew
@@ -156,7 +156,4 @@ web_default_package = com.9mitao
 ## web第三方登录，微博、qq接入，切换域名后的包名
 web_new_package = com.9shows
 
-## 梦幻科技短信平台  这是测试帐号，暂不开启
-mhkj.userid=J92578
-mhkj.pwd=220156
-mjkj.uri=http://61.145.229.26:8086/MWGate/wmgw.asmx/MongateSendSubmit
+
