--- a/live-service-web/src/main/resources/conf.properties
+++ b/live-service-web/src/main/resources/conf.properties
@@ -7,6 +7,7 @@ mc.data.token.exptime=21600
 
 # 测试服务器http请求地址(如开、停播通知,需要转发到测试服)
 testServiceHttpUrl=http://192.168.1.70:8616/
+im.socket.url=192.168.1.70
 
 md5Code=abcd
 desc=giftNew
