--- a/im_core/conf_test/conf.properties
+++ b/im_core/conf_test/conf.properties
@@ -8,6 +8,7 @@ sensitive.word.match.type=1
 
 ####### socket server conf ##########
 socket.port=9999
+service_socket.port=9998
 netty_socketio.port=9888
 ## time in second
 socket.timeout=360
